--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title>Test</title>
+  <style>
+body {
+    background-color: #900000;
+}
+</style>
 </head>
 <body>
 <marquee>Hello World!</marquee>
