--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <title>Test</title>
   <style>
+  {
+    padding-top: 25px;
+    padding-right: 50px;
+    padding-bottom: 25px;
+    padding-left: 50px;
+}
 body {
     background-color: #900000;
 }
@@ -10,5 +16,6 @@ body {
 </head>
 <body>
 <marquee>Hello World!</marquee>
+
 </body>
 </html>
