--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <title>Test</title>
   <style>
-  {
-    padding-top: 25px;
-    padding-right: 10px;
-    padding-bottom: 25px;
-    padding-left: 10px;
+p.padding {
+  padding-top: 25px;
+  padding-right: 50px;
+  padding-bottom: 25px;
+  padding-left: 50px;
 }
 body {
     background-color: #900000;
