--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 </style>
 </head>
 <body>
-<marquee>Hello World!</marquee>
+<p class="padding"><marquee>Hello World!</marquee></p>
 
 </body>
 </html>
