--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ p.padding {
   padding-right: 500px;
   padding-bottom: 25px;
   padding-left: 500px;
+  font-size: 40px;
 }
 body {
     background-color: #900000;
