--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Test</title>
+  <title>Welcome to ANERA.</title>
   <style>
 p.padding {
   padding-top: 50px;
