--- a/sie.html
+++ b/sie.html
@@ -5,7 +5,7 @@
 <script>
 int name = "ABCD";
 </script>
-  <title>Welcome to ANERA.</title>
+  <title>NAME</title>
   <style>
 p.padding {
   padding-top: 50px;
