--- a/sie.html
+++ b/sie.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<p id="demo"></p>
 <script>
 int name = "ABCD";
 </script>
-  <title>NAME</title>
+  <title>NAME2</title>
   <style>
 p.padding {
   padding-top: 50px;
@@ -22,7 +21,7 @@ body {
 <body>
 <p class="padding">What is your name?</p>
 <script>
-document.getElementById("demo").innerHTML = name;
+<p class="padding"> name </p>
 </script>
 </body>
 </html>
