--- a/sie.html
+++ b/sie.html
@@ -20,8 +20,7 @@ body {
 </head>
 <body>
 <p class="padding">What is your name?</p>
-<script>
-<p class="padding"> name </p>
-</script>
+
+document.getElementById("name")
 </body>
 </html>
