--- a/sie.html
+++ b/sie.html
@@ -20,7 +20,8 @@ body {
 </head>
 <body>
 <p class="padding">What is your name?</p>
-
+<script></script>
 document.getElementById("name")
+</script>
 </body>
 </html>
