--- a/sie.html
+++ b/sie.html
@@ -20,7 +20,7 @@ body {
 </head>
 <body>
 <p class="padding">What is your name?</p>
-<script></script>
+<script>
 document.getElementById("name")
 </script>
 </body>
