--- a/sie.html
+++ b/sie.html
@@ -4,7 +4,7 @@
 <script>
 int name = "ABCD";
 </script>
-  <title>NAME</title>
+  <title>NAME2</title>
   <style>
 p.padding {
   padding-top: 50px;
