--- a/sie.html
+++ b/sie.html
@@ -21,7 +21,7 @@ body {
 <body>
 <p class="padding">What is your name?</p>
 <script>
-document.getElementById("name")
+document.getElementById("name");
 </script>
 </body>
 </html>
