--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
   <title>Welcome to ANERA.</title>
   <style>
-p.padding {
+p.paddingA {
   padding-top: 50px;
   padding-right: 500px;
   padding-bottom: 25px;
   padding-left: 500px;
   font-size: 40px;
+}
+p.paddingB {
+  padding-top: 50px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 body {
     background-color: #900000;
@@ -16,7 +21,17 @@ body {
 </style>
 </head>
 <body>
-<p class="padding"><marquee>Welcome to ANERA, prepare to survive!</marquee></p>
+<p class="paddingA"><marquee>Welcome to ANERA, prepare to survive!</marquee></p>
 
+<p class="paddingB">
+
+  <button onclick="myFunction()">Enter Anera</button>
+
+<script>
+function myFunction() {
+  
+}
+
+</p>
 </body>
 </html>
