--- a/sie.html
+++ b/sie.html
@@ -14,7 +14,8 @@ p.padding {
   font-size: 18px;
 }
 body {
-    background-color: #f0f0f0;
+    background-color: #000000;
+    color: #f0f0f0;
 }
 </style>
 </head>
