--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <title>ANERA.</title>
   <style>
+  <script>
+function myFunction() {
+  
+}
+  </script>
 p.paddingA {
   padding-top: 50px;
   padding-right: 500px;
@@ -26,25 +31,6 @@ body {
 
   <button onclick="myFunction()">Enter Anera</button>
 
-<script>
-function myFunction() {
-  
-}
-</p>
-<p>
-
-
-
-
-
-
-
-
-
-
-
-
-Beta
 </p>
 </body>
 </html>
