--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ function myFunction() {
   
 }
   </script>
-p.paddingA {
+p.padding {
   padding-top: 50px;
   padding-right: 500px;
   padding-bottom: 25px;
@@ -25,7 +25,7 @@ body {
 </style>
 </head>
 <body>
-<p class="paddingA"><marquee>Welcome to ANERA, prepare to survive!</marquee></p>
+<p class="padding"><marquee>Welcome to ANERA, prepare to survive!</marquee></p>
 
 <p class="paddingB">
 
