--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
   <title>ANERA</title>
   <style>
   <script>
-function myFunction() {
-  
-}
+
   </script>
-p.padding {
+p.paddingA {
   padding-top: 50px;
   padding-right: 500px;
   padding-bottom: 25px;
@@ -25,11 +23,11 @@ body {
 </style>
 </head>
 <body>
-<p class="padding"><marquee>Welcome to ANERA, prepare to survive!</marquee></p>
+<p class="paddingA"><marquee>Welcome to ANERA, prepare to survive!</marquee></p>
 
 <p class="paddingB">
 
-  <button onclick="myFunction()">Enter Anera</button>
+  <a href='aden-xin.github.io/Anera.html'>  <button onclick="myFunction()">Enter Anera</button></a>
 
 </p>
 </body>
