--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
 
 <p class="paddingB">
 
-  <a href='aden-xin.github.io/Anera.html'>  <button onclick="myFunction()">Enter Anera</button></a>
+  <a href='ANERA.html'>  <button onclick="myFunction()">Enter Anera</button></a>
 
 </p>
 </body>
