--- a/ANERA.html
+++ b/ANERA.html
@@ -6,9 +6,12 @@
 p.paddingA {
   padding-top: 50px;
   padding-right: 475px;
-  padding-bottom: 25px;
+  padding-bottom: 100px;
   padding-left: 475px;
   font-size: 40px;
+}
+p.Color {
+  font-size: 14px;
 }
 
 body {
@@ -19,6 +22,7 @@ body {
 <body>
 <p class="paddingA">Welcome to the land of Anera.</p>
 
+<p class="Color">Anera is a land of deep hatred, dispair, and fear.</p>
 
 </body>
 </html>
