--- a/ANERA.html
+++ b/ANERA.html
@@ -12,17 +12,21 @@ p.paddingA {
 }
 p.Color {
   font-size: 14px;
+  color: #ffffff;
 }
 
+
 body {
-    background-color: #900000;
+  background-color: #000000;
+  color: #909090;
+
 }
 </style>
 </head>
 <body>
 <p class="paddingA">Welcome to the land of Anera.</p>
 
-<p class="Color">Anera is a land of deep hatred, dispair, and fear.</p>
+<p class="Color">Anera is a land of deep hatred, dispair, and fear. Are you prepared for what you may encounter?</p>
 
 </body>
 </html>
