--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@ body {
 </style>
 </head>
 <body>
-<p class="paddingA"><marquee>Welcome to ANERA, prepare to survive!</marquee></p>
+<p class="paddingA">
+
+  <marquee>Welcome to Anera, prepare to survive!</marquee>
+
+</p>
 
 <p class="paddingB">
 
