--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ p.paddingA {
 p.paddingB {
   padding-top: 50px;
   padding-left: 550px;
+  color: #900000;
 }
 body {
     background-color: #900000;
