--- a/index.html
+++ b/index.html
@@ -3,34 +3,31 @@
 <head>
   <title>ANERA</title>
   <style>
-  <script>
-
-  </script>
-p.paddingA {
+p.A {
   padding-top: 50px;
   padding-right: 500px;
   padding-bottom: 25px;
   padding-left: 500px;
   font-size: 40px;
 }
-p.paddingB {
+p.B {
   padding-top: 50px;
   padding-left: 550px;
   color: #900000;
 }
 body {
-    background-color: #900000;
+    background-color: #000000;
 }
 </style>
 </head>
 <body>
-<p class="paddingA">
+<p class="A">
 
   <marquee>Welcome to Anera, prepare to survive!</marquee>
 
 </p>
 
-<p class="paddingB">
+<p class="B">
 
   <a href='ANERA.html'>  <button onclick="myFunction()">Enter Anera</button></a>
 
