--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
 
 <p class="B">
 
-  <a href='ANERA.html'>  <button onclick="myFunction()">Enter Anera</button></a>
+  <a href='ANERA.html'>  <button>Enter Anera</button></a>
 
 </p>
 </body>
