--- a/ANERA.html
+++ b/ANERA.html
@@ -26,5 +26,7 @@ body {
 
 <p class="Color">Anera is a land of deep hatred, dispair, and fear. Are you prepared for what you may encounter?</p>
 
+<a href='2.html'>  <button>Enter Anera</button></a>
+
 </body>
 </html>
