--- a/ANERA.html
+++ b/ANERA.html
@@ -26,7 +26,8 @@ body {
 
 <p class="Color">Anera is a land of deep hatred, dispair, and fear. Are you prepared for what you may encounter?</p>
 
-<a href='2.html'>  <button>Enter Anera</button></a>
+<a href='Yes.html'>  <button>Yes</button></a>
 
+<a href='No.html'>  <button>Yes</button></a>
 </body>
 </html>
