--- a/Yes.html
+++ b/Yes.html
@@ -18,10 +18,6 @@ p.STORY {
   padding-bottom: 50px;
 }
 
-var Player = {Race:"", Name:"", Tou:10, Str:10, Agi:10, Int:10, MaxHP:3*Player.Tou, MaxMP:3*Player.int}
-
-
-
 </head>
 
 
@@ -38,9 +34,10 @@ var Player = {Race:"", Name:"", Tou:10, Str:10, Agi:10, Int:10, MaxHP:3*Player.T
   <b>Old man:</b> "Are you Ok young traveler? You just fell from the sky.
 
 </p>
-
+<script>
+var Player = {Race:"", Name:"", Tou:10, Str:10, Agi:10, Int:10, MaxHP:3*Player.Tou, MaxMP:3*Player.int}
 document.getElementById("Text").innerHTML = Player.MaxHP;
-
+</script>
 
 
 </body>
