--- a/ANERA.html
+++ b/ANERA.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ANERA.</title>
+  <title>ANERA</title>
   <style>
 p.paddingA {
   padding-top: 50px;
@@ -28,6 +28,6 @@ body {
 
 <a href='Yes.html'>  <button>Yes</button></a>
 
-<a href='No.html'>  <button>Yes</button></a>
+<a href='No.html'>  <button>No</button></a>
 </body>
 </html>
