--- a/Yes.html
+++ b/Yes.html
@@ -5,6 +5,7 @@
 
 <title>Anera</title>
 
+<style>
 body {
     background-color: #050505;
     color: #ffffff;
@@ -21,7 +22,7 @@ p.STORY {
   padding-left: 50px;
   padding-bottom: 50px;
 }
-
+</style>
 </head>
 
 
@@ -38,6 +39,7 @@ p.STORY {
   <b>Old man:</b> "Are you Ok young traveler? You just fell from the sky.
 
 </p>
+
 <script>
 var Player = {Race:"", Name:"", Tou:10, Str:10, Agi:10, Int:10, MaxHP:3*Player.Tou, MaxMP:3*Player.int}
 document.getElementById("Text").innerHTML = Player.MaxHP;
