--- a/Yes.html
+++ b/Yes.html
@@ -32,11 +32,11 @@ p.STORY {
   You wake up in a small hut remembering nothing but a name.
   
 </p>
-<p id="Text"></p>
+<p class="Text"></p>
 
 <p class="NPC">
 
-  <b>Old man:</b> "Are you Ok young traveler? You just fell from the sky.
+  <b>Old man:</b> "Are you Ok young traveler? You just fell from the sky."
 
 </p>
 
