--- a/Yes.html
+++ b/Yes.html
@@ -43,7 +43,7 @@ p.STORY {
 
 <script>
 var Player = {Race:"", Name:"", Tou:10, Str:10, Agi:10, Int:10, MaxHP:3*Player.Tou, MaxMP:3*Player.int}
-document.getElementById("Player.MaxHP");
+document.getElementById(Player.MaxHP);
 </script>
 
 
