--- a/Yes.html
+++ b/Yes.html
@@ -46,6 +46,12 @@ var Player = {Race:"", Name:"", Tou:10, Str:10, Agi:10, Int:10, MaxHP:3*Player.T
 document.getElementById(Player.MaxHP);
 </script>
 
+<p id="demo"></p>
+
+<script>
+var car = {type:"Fiat", model:500, color:"white"};
+document.getElementById("demo").innerHTML = car.type;
+</script>
 
 </body>
 </html>
