--- a/Yes.html
+++ b/Yes.html
@@ -33,7 +33,6 @@ p.STORY {
   You wake up in a small hut remembering nothing but a name.
   
 </p>
-<p class="Text"></p>
 
 <p class="NPC">
 
@@ -41,16 +40,12 @@ p.STORY {
 
 </p>
 
-<script>
-var Player = {Race:"", Name:"", Tou:10, Str:10, Agi:10, Int:10, MaxHP:3*Player.Tou, MaxMP:3*Player.int}
-document.getElementById(Player.MaxHP);
-</script>
 
 <p id="demo"></p>
 
 <script>
-var car = {type:"Fiat", model:500, color:"white"};
-document.getElementById("demo").innerHTML = car.type;
+var player = {type:"", tou:10, str:10, agi:10, int:10, name:""};
+document.getElementById("demo").innerHTML = agi;
 </script>
 
 </body>
