--- a/Yes.html
+++ b/Yes.html
@@ -45,7 +45,7 @@ p.STORY {
 
 <script>
 var player = {type:"", tou:10, str:10, agi:10, int:10, name:""};
-document.getElementById("demo").innerHTML = agi;
+document.getElementById("demo").innerHTML = player.agi;
 </script>
 
 </body>
