--- a/Yes.html
+++ b/Yes.html
@@ -47,7 +47,7 @@ p.STORY {
 
 <script>
 var player = {type:"", tou:10, str:10, agi:10, int:10, maxhp:3*tou, maxmp:3*tou, name:""};
-document.getElementById("demo").innerHTML = player.agi;
+document.getElementById("demo").innerHTML = player.maxhp;
 </script>
 
 </body>
