--- a/Yes.html
+++ b/Yes.html
@@ -46,7 +46,7 @@ p.STORY {
 <p id="demo"></p>
 
 <script>
-var player = {type:"", tou:10, str:10, agi:10, int:10, maxhp:3*tou, maxmp:3*tou, name:""};
+var player = {type:"", tou:10, str:10, agi:10, int:10, maxhp:3, maxmp:3, name:""};
 document.getElementById("demo").innerHTML = player.maxhp;
 </script>
 
