--- a/Yes.html
+++ b/Yes.html
@@ -4,7 +4,7 @@
 <head>
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-<title>Anera</title>
+<title>Anea</title>
 
 <style>
 body {
