--- a/Yes.html
+++ b/Yes.html
@@ -4,7 +4,7 @@
 <head>
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-<title>Anea</title>
+<title>Anera</title>
 
 <style>
 body {
@@ -45,8 +45,10 @@ p.STORY {
 
 <p id="demo"></p>
 
+var Tou = 10;
+
 <script>
-var player = {type:"", tou:10, str:10, agi:10, int:10, maxhp:3 * player.tou, maxmp:3 * player.int, name:""};
+var player = {type:"", tou:Tou, str:10, agi:10, int:10, maxhp:3, maxmp:3 *, name:""};
 document.getElementById("demo").innerHTML = player.maxhp;
 </script>
 
