--- a/Yes.html
+++ b/Yes.html
@@ -45,10 +45,11 @@ p.STORY {
 
 <p id="demo"></p>
 
-var Tou = 10;
 
 <script>
-var player = {type:"", tou:Tou, str:10, agi:10, int:10, maxhp:3, maxmp:3 *, name:""};
+var Tou = 10;
+
+var player = {type:"", tou:Tou, str:10, agi:10, int:10, maxhp:3, maxmp:3, name:""};
 document.getElementById("demo").innerHTML = player.maxhp;
 </script>
 
