--- a/Yes.html
+++ b/Yes.html
@@ -49,7 +49,7 @@ p.STORY {
 <script>
 var Tou = 10;
 
-var player = {type:"", tou:Tou, str:10, agi:10, int:10, maxhp:3, maxmp:3, name:""};
+var player = {type:"", tou:Tou, str:10, agi:10, int:10, maxhp:3 * Tou, maxmp:3, name:""};
 document.getElementById("demo").innerHTML = player.maxhp;
 </script>
 
