--- a/Yes.html
+++ b/Yes.html
@@ -48,8 +48,10 @@ p.STORY {
 
 <script>
 var Tou = 10;
-
-var player = {type:"", tou:Tou, str:10, agi:10, int:10, maxhp:3 * Tou, maxmp:3, name:""};
+var Int = 10;
+var Str = 10;
+var Age = 10;
+var player = {type:"", tou:Tou, str:Str, agi:Agi, int:Int, maxhp:3 * Tou, maxmp:3 * Int, name:""};
 document.getElementById("demo").innerHTML = player.maxhp;
 </script>
 
