--- a/Yes.html
+++ b/Yes.html
@@ -50,7 +50,7 @@ p.STORY {
 var Tou = 10;
 var Int = 10;
 var Str = 10;
-var Age = 10;
+var Agi = 10;
 var player = {type:"", tou:Tou, str:Str, agi:Agi, int:Int, maxhp:3 * Tou, maxmp:3 * Int, name:""};
 document.getElementById("demo").innerHTML = player.maxhp;
 </script>
