--- a/Yes.html
+++ b/Yes.html
@@ -52,7 +52,14 @@ var Int = 10;
 var Str = 10;
 var Agi = 10;
 var player = {type:"", tou:Tou, str:Str, agi:Agi, int:Int, maxhp:3 * Tou, maxmp:3 * Int, name:""};
+</script>
+<p>Max HP:</p>
+<script>
 document.getElementById("demo").innerHTML = player.maxhp;
+</script>
+<p>Max MP:</p>
+<script>
+document.getElementById("demo").innerHTML = player.maxmp;
 </script>
 
 </body>
