--- a/Yes.html
+++ b/Yes.html
@@ -52,7 +52,7 @@ p.STORY {
 
 <p class="A">
 <script>
-var player = new Character({name: "Bob", toughness: 10, strength: 10, intelligence: 10, agility: 10});
+var player = new Character({name: prompt("Please enter your name", "Harry Potter"), toughness: 10, strength: 10, intelligence: 10, agility: 10});
 document.getElementById("demo").innerHTML = player.maxhp;
 </script>
 </p>
