--- a/Yes.html
+++ b/Yes.html
@@ -5,7 +5,7 @@
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <script src="./main.js"></script>
-<title>Anera</title>
+<title>Aner</title>
 
 
 <style>
