--- a/Yes.html
+++ b/Yes.html
@@ -51,7 +51,7 @@ p.STORY {
 <p id="demo"></p>
 
 <p class="A">
-<button onclick="CharMake()">Try it</button>
+<button onclick="CharMake()">Create Character</button>
 <script>
 CharMake(){
 var player = new Character({name: prompt("Please enter your name", ""), toughness: 10, strength: 10, intelligence: 10, agility: 10});
