--- a/Yes.html
+++ b/Yes.html
@@ -48,12 +48,14 @@ p.STORY {
 </p>
 
 
+
 <p id="demo"></p>
 
 <p class="A">
 
 <script>
 var player = new Character({name: prompt("Please enter your name", ""), toughness: 10, strength: 10, intelligence: 10, agility: 10});
+Battle();
 </script>
 </p>
 </body>
