--- a/Yes.html
+++ b/Yes.html
@@ -5,7 +5,7 @@
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <script src="./main.js"></script>
-<title>Ane-ra</title>
+<title>Anera</title>
 
 
 <style>
@@ -55,7 +55,7 @@ p.STORY {
 
 <script>
 var player = new Character({name: prompt("Please enter your name", ""), toughness: 10, strength: 10, intelligence: 10, agility: 10});
-Battle();
+function Battle();
 </script>
 </p>
 </body>
