--- a/Yes.html
+++ b/Yes.html
@@ -51,12 +51,12 @@ p.STORY {
 
 <p id="demo"></p>
 
-<p class="A">
+
 
 <script>
 var player = new Character({name: prompt("Please enter your name", ""), toughness: 10, strength: 10, intelligence: 10, agility: 10});
-function Battle();
+Battle();
 </script>
-</p>
+
 </body>
 </html>
