--- a/ANERA.html
+++ b/ANERA.html
@@ -11,6 +11,7 @@ p.paddingA {
   font-size: 36px;
 }
 p.Color {
+  padding-left: 500;
   font-size: 14px;
   color: #ffffff;
 }
@@ -24,10 +25,11 @@ body {
 <body>
 <p class="paddingA">Welcome to the land of Anera.</p>
 
-<p class="Color">Anera is a land of deep hatred, dispair, and fear. Are you prepared for what you may encounter?</p>
+<p class="Color">Anera is a land of deep hatred, dispair, and fear. Are you prepared for what you may encounter?
 
 <a href='Yes.html'>  <button>Yes</button></a>
 
 <a href='No.html'>  <button>No</button></a>
+</p>
 </body>
 </html>
