--- a/ANERA.html
+++ b/ANERA.html
@@ -6,12 +6,23 @@
 p.paddingA {
   padding-top: 50px;
   padding-right: 475px;
-  padding-bottom: 100px;
+  padding-bottom: 25px;
   padding-left: 475px;
   font-size: 36px;
 }
 p.Color {
-  padding-left: 500;
+  padding-top: 25px;
+  padding-right: 475px;
+  padding-bottom: 25px;
+  padding-left: 475px;
+  font-size: 14px;
+  color: #ffffff;
+}
+a.A {
+  padding-top: 25px;
+  padding-right: 475px;
+  padding-bottom: 100px;
+  padding-left: 475px;
   font-size: 14px;
   color: #ffffff;
 }
@@ -27,9 +38,9 @@ body {
 
 <p class="Color">Anera is a land of deep hatred, dispair, and fear. Are you prepared for what you may encounter?
 
-<a href='Yes.html'>  <button>Yes</button></a>
+<a href='Yes.html' class="A">  <button>Yes</button></a>
 
-<a href='No.html'>  <button>No</button></a>
+<a href='No.html' class="A">  <button>No</button></a>
 </p>
 </body>
 </html>
