--- a/ANERA.html
+++ b/ANERA.html
@@ -19,7 +19,15 @@ p.Color {
   color: #ffffff;
 }
 a.A {
-  padding-top: 25px;
+  padding-top: 50px;
+  padding-right: 675px;
+  padding-bottom: 100px;
+  padding-left: 200px;
+  font-size: 14px;
+  color: #ffffff;
+}
+a.B {
+  padding-top: 50px;
   padding-right: 675px;
   padding-bottom: 100px;
   padding-left: 200px;
@@ -40,7 +48,7 @@ body {
 
 <a href='Yes.html' class="A">  <button>Yes</button></a>
 
-<a href='No.html' class="A">  <button>No</button></a>
+<a href='No.html' class="B">  <button>No</button></a>
 </p>
 </body>
 </html>
