--- a/ANERA.html
+++ b/ANERA.html
@@ -46,9 +46,9 @@ body {
 
 <p class="Color">Anera is a land of deep hatred, dispair, and fear. Are you prepared for what you may encounter?
 
-<a href='Yes.html' class="A">  <button>Yes</button></a>
+<a href='Yes.html'>  <button>Yes</button></a>
 
-<a href='No.html' class="B">  <button>No</button></a>
+<a href='No.html'">  <button>No</button></a>
 </p>
 </body>
 </html>
