--- a/Yes.html
+++ b/Yes.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<p id="OK">I'm fine.</p>
+\\<p id="OK">I'm fine.</p>
 
 <p id="Hurt">No, my head hurts and I can't remember anything!</p>
 
@@ -22,6 +22,12 @@ body {
 }
 
 p.NPC {
+  color: #5050ff;
+  padding-left: 50px;
+  padding-bottom: 50px;
+}
+
+p.Button {
   color: #5050ff;
   padding-left: 50px;
   padding-bottom: 50px;
@@ -49,8 +55,16 @@ p.STORY {
 <p class="NPC">
 
   <b>Old man:</b> "Are you Ok young traveler? You just fell from the sky."
+  
+</p>
+ 
+<p class="Button">
 
-<button onclick='getElementById("OK")'>Yes</button>
+<button onclick= "I'm fine" >Yes</button>
+
+</p>
+
+<p class="Button">
 
 <button onclick='getElementById("Hurt")'>No</button>
 
