--- a/Yes.html
+++ b/Yes.html
@@ -4,8 +4,6 @@
 <head>
 
 
-<p id="Hurt">No, my head hurts and I can't remember anything!</p>
-
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <script src="./main.js"></script>
 <title>Anera</title>
@@ -59,13 +57,13 @@ p.STORY {
  
 <p class="Button">
 
-<button onclick= "I'm fine" >Yes</button>
+<button onclick=>Yes</button>
 
 </p>
 
 <p class="Button">
 
-<button onclick='getElementById("Hurt")'>No</button>
+<button onclick=>No</button>
 
 </p>
 
