--- a/Yes.html
+++ b/Yes.html
@@ -38,6 +38,8 @@ p.STORY {
 }
 </style>
 
+<script>
+
 function Yes() {
     document.getElementById("NPC").innerHTML = "I'm Fine.";
 }
@@ -45,6 +47,8 @@ function Yes() {
 function No() {
     document.getElementById("NPC").innerHTML = "No, I can't remember anything, and I have a headache.";
 }
+
+</script>
 
 </head>
 
