--- a/Yes.html
+++ b/Yes.html
@@ -52,15 +52,15 @@ p#STORY {
 
 <script>
 
-function Yes() {
-    document.getElementById("PC").innerHTML = "I'm Fine.";
+function Y1_1() {
+    document.getElementById("PC").innerHTML = "I'm fine, but I can't remember anything, where are we?";
     document.getElementById("NPC").innerHTML = "";
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("Button").innerHTML = "";
     document.getElementById("Button2").innerHTML = "";
 }
 
-function No() {
+function 1_2() {
     document.getElementById("PC").innerHTML = "No, I can't remember anything, and I have a headache.";
     document.getElementById("NPC").innerHTML = "";
     document.getElementById("STORY").innerHTML = "";
@@ -96,11 +96,11 @@ function No() {
  
 <p id="Button">
 
-<button onclick="Yes()">Yes</button>
+<button onclick="1_1()">Yes</button>
 
 </p>
 
-<p id="Button2">
+<p id="1_2">
 
 <button onclick="No()">No</button>
 
