--- a/Yes.html
+++ b/Yes.html
@@ -52,7 +52,7 @@ p#STORY {
 
 <script>
 
-function Y1_1() {
+function A-A() {
     document.getElementById("PC").innerHTML = "I'm fine, but I can't remember anything, where are we?";
     document.getElementById("NPC").innerHTML = "";
     document.getElementById("STORY").innerHTML = "";
@@ -60,7 +60,7 @@ function Y1_1() {
     document.getElementById("Button2").innerHTML = "";
 }
 
-function 1_2() {
+function A-B() {
     document.getElementById("PC").innerHTML = "No, I can't remember anything, and I have a headache.";
     document.getElementById("NPC").innerHTML = "";
     document.getElementById("STORY").innerHTML = "";
@@ -96,13 +96,13 @@ function 1_2() {
  
 <p id="Button">
 
-<button onclick="1_1()">Yes</button>
+<button onclick="A-A()">Yes</button>
 
 </p>
 
-<p id="1_2">
+<p id="Button">
 
-<button onclick="No()">No</button>
+<button onclick="A-B()">No</button>
 
 </p>
 
