--- a/Yes.html
+++ b/Yes.html
@@ -30,13 +30,19 @@ p#PC {
   padding-bottom: 50px;
 }
 
-p#Button {
+p#AA {
   color: #5050ff;
   padding-left: 50px;
   padding-bottom: 50px;
 }
 
-p#Button2 {
+p#AB {
+  color: #5050ff;
+  padding-left: 50px;
+  padding-bottom: 50px;
+}
+
+p#B {
   color: #5050ff;
   padding-left: 50px;
   padding-bottom: 50px;
@@ -109,8 +115,6 @@ var player = new Character({name: prompt("Please enter your name", ""), toughnes
 <button onclick="AB()">No</button>
 
 </p>
-
-<p id="demo"></p>
 
 </body>
 </html>
