--- a/Yes.html
+++ b/Yes.html
@@ -63,7 +63,7 @@ function AA() {
     document.getElementById("NPC").innerHTML = "";
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
-    document.getElementById("AB").innerHTML = <button onclick="B()">Continue</button>;
+    document.getElementById("AB").innerHTML = "<button onclick="B()">Continue</button>";
 }
 
 function AB() {
@@ -71,7 +71,7 @@ function AB() {
     document.getElementById("NPC").innerHTML = "";
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
-    document.getElementById("AB").innerHTML = <button onclick="B()">Continue</button>;
+    document.getElementById("AB").innerHTML = "<button onclick="B()">Continue</button>";
 }
 
 </script>
