--- a/Yes.html
+++ b/Yes.html
@@ -63,15 +63,15 @@ function AA() {
     document.getElementById("NPC").innerHTML = "";
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
-    document.getElementById("AB").innerHTML = "<button onclick="B()">Continue</button>";
+    document.getElementById("AB").innerHTML = "<";
 }
 
 function AB() {
-    document.getElementById("PC").innerHTML = "No, I can't remember anything, and I have a headache.";
+    document.getElementById("PC").innerHTML = "";
     document.getElementById("NPC").innerHTML = "";
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
-    document.getElementById("AB").innerHTML = "<button onclick="B()">Continue</button>";
+    document.getElementById("AB").innerHTML = "";
 }
 
 </script>
