--- a/Yes.html
+++ b/Yes.html
@@ -63,7 +63,7 @@ function AA() {
     document.getElementById("NPC").innerHTML = "";
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
-    document.getElementById("AB").innerHTML = "<";
+    document.getElementById("AB").innerHTML = "";
 }
 
 function AB() {
