--- a/Yes.html
+++ b/Yes.html
@@ -64,6 +64,7 @@ function AA() {
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
+    <button onclick="B()">Continue</button>
 }
 
 function AB() {
@@ -72,6 +73,7 @@ function AB() {
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
+    <button onclick="B()">Continue</button>
 }
 
 </script>
