--- a/Yes.html
+++ b/Yes.html
@@ -67,7 +67,7 @@ function AA() {
 }
 
 function AB() {
-    document.getElementById("PC").innerHTML = "";
+    document.getElementById("PC").innerHTML = "No, I can't remember anything and I have a head ache.";
     document.getElementById("NPC").innerHTML = "";
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
