--- a/Yes.html
+++ b/Yes.html
@@ -64,6 +64,7 @@ function AA() {
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
+    document.getElementById("AB").innerHTML = "";
 }
 
 function AB() {
@@ -71,6 +72,7 @@ function AB() {
     document.getElementById("NPC").innerHTML = "";
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
+    document.getElementById("AB").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
 }
 
@@ -113,6 +115,12 @@ var player = new Character({name: prompt("Please enter your name", ""), toughnes
 <p id="AB">
 
 <button onclick="AB()">No</button>
+
+</p>
+
+<p id="AB">
+
+<button onclick="B()">Continue</button>
 
 </p>
 
