--- a/Yes.html
+++ b/Yes.html
@@ -46,6 +46,7 @@ p#B {
   color: #5050ff;
   padding-left: 50px;
   padding-bottom: 50px;
+  display: none;
 }
 
 p#STORY {
@@ -64,7 +65,7 @@ function AA() {
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
-    document.getElementById("AB").innerHTML = "";
+    document.getElementById("B").style.display = "block";
 }
 
 function AB() {
@@ -73,7 +74,10 @@ function AB() {
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
-    document.getElementById("AB").innerHTML = "";
+    document.getElementById("B").style.display = "block";
+
+function B(){
+    
 }
 
 </script>
