--- a/Yes.html
+++ b/Yes.html
@@ -65,7 +65,7 @@ function AA() {
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
-    document.getElementById("B").style.display = "block";
+    document.getElementById("B").style.display = block;
 }
 
 function AB() {
@@ -74,7 +74,7 @@ function AB() {
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
-    document.getElementById("B").style.display = "block";
+    document.getElementById("B").style.display = block;
 
 function B(){
     
