--- a/Yes.html
+++ b/Yes.html
@@ -6,7 +6,7 @@
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <script src="./main.js"></script>
-<title>AnerA</title>
+<title>Anera</title>
 
 <style>
 p.A {
@@ -65,7 +65,7 @@ function AA() {
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
-    document.getElementById("B").style.display = block;
+    document.getElementById("B").style.display = "fixed";
 }
 
 function AB() {
@@ -74,7 +74,7 @@ function AB() {
     document.getElementById("STORY").innerHTML = "";
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
-    document.getElementById("B").style.display = block;
+    document.getElementById("B").style.display = "fixed";
 
 function B(){
     
