--- a/Yes.html
+++ b/Yes.html
@@ -8,7 +8,7 @@
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <script src="./main.js"></script>
-<title>Anera</title>
+<title>Anera&trade</title>
 
 <style>
 p.A {
