--- a/Yes.html
+++ b/Yes.html
@@ -3,7 +3,7 @@
 
 <head>
 <script>
-    int A = 1;
+    var A = 1;
 </script>
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
