--- a/Yes.html
+++ b/Yes.html
@@ -67,6 +67,7 @@ function AA() {
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
     A = 2;
+    function B();
 }
 
 function AB() {
@@ -76,6 +77,7 @@ function AB() {
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
     A = 2;
+    function B();
 }
 
 function B(){
