--- a/Yes.html
+++ b/Yes.html
@@ -67,7 +67,6 @@ function AA() {
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
     A = 2;
-    function B();
 }
 
 function AB() {
@@ -77,7 +76,6 @@ function AB() {
     document.getElementById("AA").innerHTML = "";
     document.getElementById("AB").innerHTML = "";
     A = 2;
-    function B();
 }
 
 function B(){
@@ -125,6 +123,7 @@ var player = new Character({name: prompt("Please enter your name", ""), toughnes
 </p>
 
 <script>
+while (0 == 0){
 while (A == 2){
 
 <p id="B">
@@ -132,7 +131,7 @@ while (A == 2){
 <button onclick="B()">Continue</button>
 
 </p>
-
+}
 }
 </script>
 
