--- a/index.html
+++ b/index.html
@@ -5,31 +5,16 @@
   <style>
 p.A {
   padding-top: 50px;
-  padding-right: 500px;
   padding-bottom: 25px;
-  padding-left: 500px;
-  font-size: 40px;
-}
-p.B {
-  padding-top: 50px;
-  padding-left: 650px;
-  color: #900000;
-}
-body {
-    background-color: #999999;
+  text-align: center;
+  font-size: 46px;
 }
 </style>
 </head>
 <body>
 <p class="A">
 
-  <marquee>Welcome to Anera, prepare to survive!</marquee>
-
-</p>
-
-<p class="B">
-
-  <a href='ANERA.html'>  <button>Enter Anera</button></a>
+  Anera Studios
 
 </p>
 </body>
