--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <title>ANERA</title>
-  <style>
-p.A {
+<style>
+p#A {
   padding-top: 50px;
   padding-bottom: 25px;
   text-align: center;
   font-size: 46px;
 }
+body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: #050505;
+    color: #ffffff;
+}
 </style>
 </head>
 <body>
-<p class="A">
+<p id="A">
 
   Anera Studios
 
