--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ p#A {
 }
 body {
     font-family: 'Montserrat', sans-serif;
+    font-size: 22px;
     background-color: #050505;
     color: #ffffff;
 }
