--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-  <title>ANERA</title>
+  <title>Anera Studios</title>
 <style>
 p#A {
   padding-top: 50px;
@@ -26,6 +26,9 @@ body {
 </p>
 
 <a href='game.html'>          Game</a>
+<a href='Episodes.html'>          Episodes</a>
+<a href='Contact.html'>          Contact</a>
+<a href='Store.html'>          Store</a>
 
 </body>
 </html>
