--- a/Contacts.html
+++ b/Contacts.html
@@ -1,7 +1,35 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Contact</title>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <title>Contacts</title>
+<style>
+p#A {
+  padding-top: 50px;
+  padding-bottom: 25px;
+  text-align: center;
+  font-size: 32px;
+}
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 22px;
+    background-color: #050505;
+    color: #ffffff;
+}
+</style>
 </head>
 <body>
+<p id="A">
+  Contacts
+</p>
+
+<p>      Aden Xin
+    Email:aden_xin@gmail.com
+    
+    Eerie Wolf
+    Email: We could not locate this...
+    
+    James Gold
+
 </body>
 </html>
