--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
 
 <a href='game.html'>          Game</a>
 <a href='Episodes.html'>          Episodes</a>
-<a href='Contact.html'>          Contact</a>
+<a href='Contacts.html'>          Contact</a>
 <a href='Store.html'>          Store</a>
 
 </body>
