--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@ p#A {
   text-align: center;
   font-size: 46px;
 }
+p.B {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  text-align: center;
+  font-size: 24px;
+}
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 22px;
@@ -25,10 +31,13 @@ body {
 
 </p>
 
-<a href='game.html'>          Game</a>
+<div class="B">
+
+<a href='game.html'>Game</a>
 <a href='Episodes.html'>          Episodes</a>
 <a href='Contacts.html'>          Contact</a>
 <a href='Store.html'>          Store</a>
 
+</div>
 </body>
 </html>
