--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ p.B {
   padding-bottom: 25px;
   text-align: center;
   font-size: 24px;
+  display:table;
 }
 body {
     font-family: 'Montserrat', sans-serif;
