--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ p#A {
   text-align: center;
   font-size: 46px;
 }
-p.B {
+div.B {
   padding-top: 25px;
   padding-bottom: 25px;
   text-align: center;
   font-size: 24px;
-  display:table;
+  display: table;
 }
 body {
     font-family: 'Montserrat', sans-serif;
