--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@ p#A {
   font-size: 46px;
 }
 div.B {
-  padding-top: 25px;
-  padding-bottom: 25px;
-  text-align: center;
   font-size: 24px;
   display: table;
+  margin: 0px auto;
 }
 body {
     font-family: 'Montserrat', sans-serif;
