--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ ul.B li a
   padding: 30px 10px;
   font-size: 24px;
   color: #0000ff;
-  transition: color .5s;
-  -webkit-transition: color .5s;
+  transition: color 1.5s;
+  -webkit-transition: color 1.5s;
 }
 ul.B li a:hover
 {
