--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-  <title>~Anera Studios~</title>
+  <title>Anera Studios</title>
 <style>
 p#A {
   padding-top: 50px;
