--- a/Contacts.html
+++ b/Contacts.html
@@ -24,12 +24,20 @@ body {
 </p>
 
 <p>      Aden Xin
+</p>
+<p>
     Email:aden_xin@gmail.com
+</p>
     
-    Eerie Wolf
+<p>    Eerie Wolf
+</p>
+<p>
     Email: We could not locate this...
+</p>
     
-    James Gold
+<p>    James Gold
+
+</p>
 
 </body>
 </html>
